[gd_scene load_steps=5 format=3 uid="uid://dyj2dt1jchegl"]

[ext_resource type="Script" path="res://Scripts/StartScene.gd" id="1_hauky"]
[ext_resource type="Texture2D" uid="uid://ddj703ejocsim" path="res://Images/Start Screen.png" id="2_dapt4"]
[ext_resource type="Texture2D" uid="uid://jr3v5ap1b0tw" path="res://Images/png-clipart-game-buttons-3d-three-dimensional-thumbnail-removebg-preview.png" id="3_yvykb"]

[sub_resource type="LabelSettings" id="LabelSettings_o8d3q"]
font_size = 80
font_color = Color(0.952941, 0.611765, 0.0705882, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="StartScene" type="CanvasLayer"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_hauky")

[node name="TextureRect" type="TextureRect" parent="Node2D"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_dapt4")

[node name="Button" type="Button" parent="Node2D"]
offset_left = 147.0
offset_top = 1225.0
offset_right = 943.0
offset_bottom = 1912.0
icon = ExtResource("3_yvykb")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="PlayerNameTextEdit" type="TextEdit" parent="Node2D"]
offset_left = 136.0
offset_top = 877.0
offset_right = 948.0
offset_bottom = 998.0
theme_override_font_sizes/font_size = 60

[node name="EnterPlayerName" type="Label" parent="Node2D"]
offset_left = 151.0
offset_top = 624.0
offset_right = 942.0
offset_bottom = 737.0
text = "ENTER YOUR NAME"
label_settings = SubResource("LabelSettings_o8d3q")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Node2D/Button" to="Node2D" method="_on_button_pressed"]
[connection signal="text_changed" from="Node2D/PlayerNameTextEdit" to="Node2D" method="_on_player_name_text_edit_text_changed"]
